fixed drop down list going behind components of page

--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -2,9 +2,9 @@
 @import "~bulma";
 @import "~buefy/src/scss/buefy";
 
-.body {
-  opacity: 0.95;
-}
+//.body {
+//  opacity: 0.95;
+//}
 
 $colors: (
   "white": ($white, $black),
